[package]
name = "reth-evm-test-harness"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A general-purpose testing harness for custom Reth NodeBuilder and EVM implementations"
repository = "https://github.com/yourusername/reth-evm-test-harness"
keywords = ["ethereum", "reth", "evm", "testing", "harness"]

[dependencies]
# Core Reth (minimal set for EVM testing)
reth = { git = "https://github.com/paradigmxyz/reth", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth" }
reth-evm = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", optional = true }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", optional = true }

# Utilities
parking_lot = "0.12"
thiserror = "2.0"
eyre = "0.6"

# Optional: for fixture management
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth" }
alloy-evm = "0.21"

[features]
default = []
fixtures = ["serde", "serde_json"]
engine = ["reth-node-api", "reth-payload-primitives"]
