[package]
name = "reth-evm-test-harness"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A general-purpose testing harness for custom Reth NodeBuilder EVM implementations"
repository = "https://github.com/PowVT/reth-evm-test-harness"
keywords = ["ethereum", "reth", "evm", "testing", "harness"]

[dependencies]
# Reth
reth = { git = "https://github.com/paradigmxyz/reth", rev = "9c30bf7af5e0d45deaf5917375c9922c16654b28", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "9c30bf7af5e0d45deaf5917375c9922c16654b28" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "9c30bf7af5e0d45deaf5917375c9922c16654b28" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "9c30bf7af5e0d45deaf5917375c9922c16654b28" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "9c30bf7af5e0d45deaf5917375c9922c16654b28", optional = true }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "9c30bf7af5e0d45deaf5917375c9922c16654b28", optional = true }

# Alloy
alloy-evm = { version = "0.21.0", default-features = false }

# NOTE: This forces us to use the same reth version gnosis uses
# reth_gnosis = { git = "https://github.com/gnosischain/reth_gnosis", rev = "b16a95f8bb4be0e7c6e5c5799b2034a9e30fdfbd" }

# Utilities
eyre = "0.6"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"

[features]
default = []
fixtures = ["serde", "serde_json"]
engine = ["reth-node-api", "reth-payload-primitives"]
